modificare interfata utilizator si imbunatatire fisier detectare

--- a/frontend/extension/report.html
+++ b/frontend/extension/report.html
@@ -77,6 +77,22 @@
       </div>
     </section>
     
+    <section class="history-section">
+      <h2>Istoricul scanărilor</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Data</th>
+            <th>Fișier</th>
+            <th>Scor Deepfake</th>
+            <th>Risc</th>
+          </tr>
+        </thead>
+        <tbody id="history-table">
+        </tbody>
+      </table>
+    </section>
+    
     <section class="settings-section">
       <h2>Setări</h2>
       <div class="settings-form">
